--- a/src/books.html
+++ b/src/books.html
@@ -17,15 +17,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1><a href="#">Josh Wulf</a></h1>
-						<nav class="links">
-							<ul>
-								<li><a href="/books.html">Books</a></li>
-								<li><a href="#">Speaking</a></li>
-								<li><a href="https://www.github.com/jwulf" target="new">Software</a></li>
-								<li><a href="#">Events</a></li>
-								<li><a href="#">About</a></li>
-							</ul>
-						</nav>
+						<!-- @include fragments/toplinks.html -->
 						<nav class="main">
 							<ul>
 								<li class="search">
