--- a/src/speaking.html
+++ b/src/speaking.html
@@ -17,15 +17,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1><a href="#">Future Imperfect</a></h1>
-						<nav class="links">
-							<ul>
-								<li><a href="#">Lorem</a></li>
-								<li><a href="#">Ipsum</a></li>
-								<li><a href="#">Feugiat</a></li>
-								<li><a href="#">Tempus</a></li>
-								<li><a href="#">Adipiscing</a></li>
-							</ul>
-						</nav>
+						<!-- @include fragments/toplinks.html -->
 						<nav class="main">
 							<ul>
 								<li class="search">
